--- a/site/templates/about.html
+++ b/site/templates/about.html
@@ -20,31 +20,31 @@
 				<div class="block sources">
 					<div class="header">Sources</div>
 					<label for="all-check" class="item">
-						<input id="all-check" type="checkbox" name="all">
+						<input id="all-check" type="checkbox" name="all" checked>
 						<div class="label-name">All</div>
 					</label>
 					<label for="cnn-check" class="item">
-						<input id="cnn-check" type="checkbox" name="cnn">
+						<input id="cnn-check" type="checkbox" name="cnn" checked>
 						<div class="label-name">CNN</div>
 					</label>
 					<label for="cnbc-check" class="item">
-						<input id="cnbc-check" type="checkbox" name="cnbc">
+						<input id="cnbc-check" type="checkbox" name="cnbc" checked>
 						<div class="label-name">CNBC</div>
 					</label>
 					<label for="foxnews-check" class="item">
-						<input id="foxnews-check" type="checkbox" name="foxnews">
+						<input id="foxnews-check" type="checkbox" name="foxnews" checked>
 						<div class="label-name">Fox News</div>
 					</label>
 					<label for="nytimes-check" class="item">
-						<input id="nytimes-check" type="checkbox" name="nytimes">
+						<input id="nytimes-check" type="checkbox" name="nytimes" checked>
 						<div class="label-name">New York Times</div>
 					</label>
 					<label for="reuters-check" class="item">
-						<input id="reuters-check" type="checkbox" name="reuters">
+						<input id="reuters-check" type="checkbox" name="reuters" checked>
 						<div class="label-name">Reuters</div>
 					</label>
 					<label for="washingtonpost-check" class="item">
-						<input id="washingtonpost-check" type="checkbox" name="washingtonpost">
+						<input id="washingtonpost-check" type="checkbox" name="washingtonpost" checked>
 						<div class="label-name">Washington Post</div>
 					</label>
 				</div>
@@ -63,7 +63,7 @@
 						<input class="search-input" id="js-search-input" type="text" name="search" placeholder="Search">
 						<div class="search-options">
 							<label for="plain-check" class="option">
-								<input id="plain-check" type="checkbox" name="plain">
+								<input id="plain-check" type="checkbox" name="plain" checked>
 								<div class="label-name">plain </div>
 							</label>
 							<label for="regex-check" class="option">
