--- a/site/templates/about.html
+++ b/site/templates/about.html
@@ -14,8 +14,11 @@
 
 	</head>
 	<body>
-		<div class="container">
+		<noscript class="noscript-notification">
+			some site functionality won't be available without <a href="http://www.enable-javascript.com/" target="_blank">javascript</a> enabled.
+		</noscript>
 
+		<div class="container">
 			<form action="/" method="get" class="sub-container side-container" id="js-sidebar-form">
 				<div class="block sources">
 					<div class="header">Sources</div>
