--- a/site/templates/article.html
+++ b/site/templates/article.html
@@ -15,11 +15,14 @@
 
 	</head>
 	<body>
+		<noscript class="noscript-notification">
+			some site functionality won't be available without <a href="http://www.enable-javascript.com/" target="_blank">javascript</a> enabled.
+		</noscript>
 
 		<div id="js-annotation-modal" class="modal-window"></div>
 
 		<div class="container">
-
+			
 			<div class="sub-container side-container">
 
 				<form action="/article" method="post" class="block annotation-block" autocomplete="off">
