--- a/site/templates/index.html
+++ b/site/templates/index.html
@@ -14,6 +14,9 @@
 
 	</head>
 	<body>
+		<noscript class="noscript-notification">
+			some site functionality won't be available without <a href="http://www.enable-javascript.com/" target="_blank">javascript</a> enabled.
+		</noscript>
 		<div class="container">
 			<form action="/" method="get" class="sub-container side-container" id="js-sidebar-form">
 				<div class="block sources">
