--- a/site/templates/about.html
+++ b/site/templates/about.html
@@ -16,6 +16,11 @@
 	<body>
 		<noscript class="noscript-notification">
 			some site functionality won't be available without <a href="http://www.enable-javascript.com/" target="_blank">javascript</a> enabled.
+			<style>
+				.container {
+					margin-top:40px;
+				}
+			</style>
 		</noscript>
 
 		<div class="container">
@@ -93,7 +98,7 @@
 
 			</form>
 
-			<div class="sub-container main-container">
+			<div class="sub-container main-container about">
 				<div class="about-title">newsbin</div>
 				<div class="about-content">
 					<p>
