pre-deploy automated commit

--- a/site/static/css/src/index.scss
+++ b/site/static/css/src/index.scss
@@ -157,7 +157,7 @@ body {
 /* -------------------------------------------------------------------------- */
 
 .search-options>.option:hover {
-	background-color: #fff4d3;
+	background-color: white;
 }
 
 .count-input {
