--- a/site/static/css/src/index.scss
+++ b/site/static/css/src/index.scss
@@ -289,7 +289,7 @@ body {
 	width:100%;
 	color:grey;
 	text-align: center;
-	margin-top: 30px;
+	margin: 30px 0px 20px 0px;
 }
 
 /* -------------------------------------------------------------------------- */
