added google analytics tracking code, updated about page

--- a/site/templates/about.html
+++ b/site/templates/about.html
@@ -110,11 +110,7 @@
 					</p>
 					<p>
 						You can uses the tools in the left side to fetch the news
-						that interests you- by source, by keyword or even with regular
-						expressions. If you don't know what regular expressions are,
-						they're a way of describing text. You can go
-						<a href="https://regexone.com/" target="_blank">here</a> for
-						an introduction.
+						that interests you- by source, category or keyword.
 					</p>
 					<p>
 						While reading an article, you'll notice that some of the names
@@ -151,6 +147,7 @@
 			</div>
 		</div>
 		<!-- External Javascript -->
+		<script src="/static/js/analytics.js"></script>
 		<script src="/static/js/index.js"></script>
 		<!-- End External Javascript -->
 	</body>
