--- a/site/templates/article.html
+++ b/site/templates/article.html
@@ -74,6 +74,7 @@
 			</div>
 		</div>
 		<!-- External Javascript -->
+		<script src="/static/js/analytics.js"></script>
 		<script src="/static/js/article.js"></script>
 		<!-- End External Javascript -->
 	</body>
