--- a/site/templates/index.html
+++ b/site/templates/index.html
@@ -112,6 +112,7 @@
 		</div>
 
 		<!-- External Javascript -->
+		<script src="/static/js/analytics.js"></script>
 		<script src="/static/js/index.js"></script>
 		<!-- End External Javascript -->
 	</body>
