--- a/site/templates/about.html
+++ b/site/templates/about.html
@@ -59,30 +59,23 @@
 
 				<div class="block">
 					<div class="header">Categories</div>
-					<select name="category" class="categories" id="js-category-select">
-						<option value="all"></option>
-						{% for option in categories %}<option value="{{ option|lower }}">{{ option }}</option>{% endfor %}
-					</select>
+					<div class ="category-bar">
+						<select name="category" class="category-input" id="js-category-select">
+							<option value="all"></option>
+							{% for option in categories %}
+							<option value="{{ option|lower }}">{{ option }}</option>
+							{% endfor %}
+						</select>
+					</div>
 				</div>
 
 				<div class="block">
 					<div class="header">Search</div>
 					<div class="search-bar">
 						<input class="search-input" id="js-search-input" type="text" name="search" placeholder="Search">
-						<div class="search-options">
-							<label for="plain-check" class="option">
-								<input id="plain-check" type="checkbox" name="plain" checked>
-								<div class="label-name">plain </div>
-							</label>
-							<label for="regex-check" class="option">
-								<input id="regex-check" type="checkbox" name="regex">
-								<div class="label-name">regex </div>
-							</label>
-						</div>
 					</div>
 					<div class="result-bar">
-						<span>number of results (max 1000):&nbsp;</span>
-						<input class="count-input" type="number" placeholder="100" name="count" id="js-number-input">
+						<input class="count-input" type="number" placeholder="Results (max 1000)" name="count" id="js-number-input">
 					</div>
 				</div>
 
@@ -147,8 +140,8 @@
 			</div>
 		</div>
 		<!-- External Javascript -->
-		<script src="/static/js/analytics.js"></script>
 		<script src="/static/js/index.js"></script>
+		<script src="/static/js/analytics.js"></script>
 		<!-- End External Javascript -->
 	</body>
 </html>
