--- a/site/static/css/src/index.scss
+++ b/site/static/css/src/index.scss
@@ -112,32 +112,31 @@ body {
 /* -------------------------------------------------------------------------- */
 /* Checkbox Styles
 */
-.checkable:not(:checked) + div::after {
-	height:20px;
+.checkable:not(:checked) + div::after, .checkable:checked + div::after {
+	padding:0;
+	margin:0;
+
+	width: 20px;
+    height: 20px;
+
+	line-height: 18px;
+	text-align: center;
+	font-weight:bold;
+
 	float:right;
+	background-color: white;
+	border-radius: 100px;
+	border: 1px solid lightgrey;
+}
+
+.checkable:not(:checked) + div::after {
 	content:'\2212';
 	color:red;
-	background-color: white;
-    border-radius: 100px;
-    width: 20px;
-    height: 20px;
-    text-align: center;
-    line-height: 18px;
-    border: 1px solid lightgrey;
 }
 
 .checkable:checked + div::after {
-	height: 20px;
-    float: right;
     content: '\002B';
     color: green;
-    background-color: white;
-    border-radius: 100px;
-    width: 20px;
-    height: 20px;
-    text-align: center;
-    line-height: 18px;
-    border: 1px solid lightgrey;
 }
 /* -------------------------------------------------------------------------- */
 
