--- a/site/static/css/src/article.scss
+++ b/site/static/css/src/article.scss
@@ -10,6 +10,28 @@
 }
 
 /* -------------------------------------------------------------------------- */
+/* Truth Score */
+
+.modal-data {
+	width:80%;
+	text-align: left;
+}
+
+.truth-rating {
+	display:inline-block;
+	height:40px;
+	width:40px;
+	line-height: 40px;
+	text-align: center;
+	border-radius:200px;
+}
+
+.truth-disclaimer, .truth-disclaimer>a {
+	color:grey;
+	font-size:0.9em;
+}
+
+/* -------------------------------------------------------------------------- */
 /* Article Page */
 
 .article {
