--- a/site/templates/index.html
+++ b/site/templates/index.html
@@ -23,6 +23,7 @@
 			</style>
 		</noscript>
 		<div class="container">
+			<div class="mobile-menu-button"><img src="/static/img/menu.svg"></div>
 			<form action="/" method="get" class="sub-container side-container" id="js-sidebar-form">
 				<div class="block sources">
 					<div class="header">Sources</div>
