--- a/site/templates/article.html
+++ b/site/templates/article.html
@@ -52,6 +52,7 @@
 			</div>
 			<div class="sub-container main-container article">
 				<div class="article-title">{{ article.title }}</div>
+				<a href="{{ article.link }}" target="_blank" class="article-mobile-source">{{ article.source }}</a>
 				<div class="information article-information">
 					<div class="link"><span class="title-card-label">original: </span><a href="{{ article.link }}" target="_blank">link</a></div>
 					<div class="author"><span class="title-card-label">author: </span>{{ article.author }}</div>
