--- a/site/templates/index.html
+++ b/site/templates/index.html
@@ -23,7 +23,14 @@
 			</style>
 		</noscript>
 		<div class="container">
-			<div class="mobile-menu-button"><img src="/static/img/menu.svg"></div>
+			<div class="mobile-menu">
+				<div id="js-tab-search">
+					Search
+				</div>
+				<div id="js-tab-results" class="current">
+					Results
+				</div>
+			</div>
 			<form action="/" method="get" class="sub-container side-container" id="js-sidebar-form">
 				<div class="block sources">
 					<div class="header">Sources</div>
