pre-deploy automated commit

--- a/site/templates/about.html
+++ b/site/templates/about.html
@@ -24,6 +24,14 @@
 		</noscript>
 
 		<div class="container">
+			<div class="mobile-menu">
+				<div id="js-tab-search">
+					Search
+				</div>
+				<div id="js-tab-results" class="current">
+					About
+				</div>
+			</div>
 			<form action="/" method="get" class="sub-container side-container" id="js-sidebar-form">
 				<div class="block sources">
 					<div class="header">Sources</div>
