--- a/site/static/css/src/index.scss
+++ b/site/static/css/src/index.scss
@@ -248,11 +248,11 @@ body {
 	align-items:flex-end;
 }
 /* -------------------------------------------------------------------------- */
-/* Mobile Menu */
+/* Mobile Menus */
 .mobile-menu {
 	display:none;
 }
-.article-mobile-source {
+.information-block {
 	display:none;
 }
 
@@ -338,32 +338,39 @@ body {
 		height:100%;
 		user-select:none;
 
+		color:grey;
+		font-size:1.25em;
+
 		display:flex;
 		justify-content: center;
 		align-items: center;
-		background-color: lightgrey;
-		border-bottom:1px solid black;
+		background-color: #faf8f6;
+		border-bottom:2px solid lightgrey;
 	}
 	.mobile-menu>.current {
-		background-color: #faf8f6;
-		border-bottom:1px solid lightgrey;
+		color:black;
+		border-bottom:2px solid black;
 	}
 	.article-content {
 		font-size:1.1em;
 	}
-	.article-mobile-source {
-		display:block;
-		width:100%;
-		text-decoration: none;
-		color:black;
-		height:30px;
-		line-height:30px;
-		background-color: lightgrey;
-		text-align: center;
-		font-size:1.25em;
-	}
 	.article {
-		padding-top: 0;
+		padding-top: 8vh;
+	}
+	.annotation-block {
+		width:85%;
+	}
+	.information-block {
+		display:block;
+	}
+	.info-block-content {
+		padding-left: 10px;
+	}
+	.info-block-content>div {
+		padding: 5px 0 5px 0;
+	}
+	.info-block-content>div>span, .info-block-content>div>a {
+		color:grey;
 	}
 	.side-container>div {
 		width:90%;
