pre-deploy automated commit

--- a/site/templates/about.html
+++ b/site/templates/about.html
@@ -91,8 +91,8 @@
 					<input type="submit" value="Apply" class="submit-button" id="js-submit-form">
 				</div>
 
-				<div class="block information-block">
-					<div class="header">Information</div>
+				<div class="block">
+					<div class="header">Navigation</div>
 					<a href="/" class="item">Main</a>
 					<a href="https://github.com/mjhouse/newsbin" target="_blank" class="item">Github</a>
 				</div>
