--- a/site/templates/index.html
+++ b/site/templates/index.html
@@ -90,8 +90,8 @@
 					<input type="submit" value="Apply" class="submit-button" id="js-submit-form">
 				</div>
 
-				<div class="block information-block">
-					<div class="header">Information</div>
+				<div class="block">
+					<div class="header">Navigation</div>
 					<a href="/about" class="item">About</a>
 					<a href="https://github.com/mjhouse/newsbin" target="_blank" class="item">Github</a>
 				</div>
