--- a/site/static/css/src/article.scss
+++ b/site/static/css/src/article.scss
@@ -79,9 +79,10 @@
 }
 
 .modal-image {
-	height:300px;
-	width:auto;
-	max-width:90%;
+	width:90%;
+	height:auto;
+	max-width:100%;
+	max-height:100%;
 }
 
 .modal-title {
